--- a/package.json
+++ b/package.json
@@ -15,18 +15,37 @@
     "@angular/compiler": "^16.0.0",
     "@angular/core": "^16.0.0",
     "@angular/forms": "^16.0.0",
-    "@angular/platform-browser": "^16.0.0",
+    "@angular/platform-browser": "^16.0.5",
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@angular/router": "^16.0.0",
+    "bootstrap": "^5.3.0",
+    "crypto-browserify": "^3.12.0",
+    "dompurify": "^3.0.3",
+    "eml-parser": "^1.2.1",
+    "file-system": "^2.2.2",
+    "fs-web": "^1.0.1",
+    "install": "^0.13.0",
+    "mammoth": "^1.6.0",
+    "ng2-pdf-viewer": "^9.1.5",
+    "ngx-doc-viewer": "^15.0.1",
+    "path": "^0.12.7",
+    "path-browserify": "^1.0.1",
+    "planer": "^1.1.1",
+    "postal-mime": "^1.0.16",
+    "process": "^0.11.10",
     "rxjs": "~7.8.0",
+    "stream": "^0.0.2",
+    "talon": "^2.3.2",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
   "devDependencies": {
+    "@angular-builders/custom-webpack": "^16.0.0",
     "@angular-devkit/build-angular": "^16.0.4",
     "@angular/cli": "~16.0.4",
     "@angular/compiler-cli": "^16.0.0",
     "@types/jasmine": "~4.3.0",
+    "@types/node": "^20.3.1",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
