--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -3,12 +3,15 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "./out-tsc/app",
-    "types": []
+    "types": ["node"]
+  },
+  "paths" : {
+    "fs": "./node_modules/fs-web",
   },
   "files": [
-    "src/main.ts"
+    "src/main.ts",
   ],
   "include": [
-    "src/**/*.d.ts"
+    "src/**/*.d.ts",
   ]
 }
