--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^16.0.5",
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@angular/router": "^16.0.0",
+    "@azure/msal-angular": "^3.0.0-alpha.2",
     "bootstrap": "^5.3.0",
     "crypto-browserify": "^3.12.0",
     "dompurify": "^3.0.3",
