--- a/package.json
+++ b/package.json
@@ -22,11 +22,14 @@
     "@angular/router": "^16.0.0",
     "@azure/msal-angular": "^3.0.0-alpha.2",
     "@kenjiuno/msgreader": "^1.20.0-alpha.1",
+    "ag-grid-angular": "^30.0.2",
+    "ag-grid-community": "^30.0.2",
     "bootstrap": "^5.3.0",
     "crypto-browserify": "^3.12.0",
     "dompurify": "^3.0.3",
     "fs-web": "^1.0.1",
     "install": "^0.13.0",
+    "material-icons": "^1.13.8",
     "ng2-pdf-viewer": "^9.1.5",
     "ngx-doc-viewer": "^15.0.1",
     "path": "^0.12.7",
@@ -51,6 +54,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
+    "schematics-scss-migrate": "^2.3.17",
     "typescript": "~5.0.2"
   }
 }
